[gd_scene load_steps=3 format=3 uid="uid://mg6lameu85j0"]

[ext_resource type="PackedScene" uid="uid://nu33bt3guqn2" path="res://scenes/RoomManager.tscn" id="1_ibiss"]
[ext_resource type="Script" uid="uid://diee45yivxyh7" path="res://scripts/UI.gd" id="2_c6dvc"]

[node name="MainScene" type="Node2D"]

[node name="RoomManager" parent="." instance=ExtResource("1_ibiss")]

[node name="World" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_c6dvc")

[node name="TimerDisplay" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="EnergyDisplay" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="KeyIndicator" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
